--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,80 @@
-version: '3.8'
+# version: "3.8"
+
+# services:
+#   postgres:
+#     image: postgres:15-alpine
+#     container_name: pg_gateway
+#     environment:
+#       POSTGRES_DB: payment_gateway
+#       POSTGRES_USER: gateway_user
+#       POSTGRES_PASSWORD: gateway_pass
+#     ports:
+#       - "5432:5432"
+#     volumes:
+#       - pg_data:/var/lib/postgresql/data
+#     healthcheck:
+#       test: ["CMD-SHELL", "pg_isready -U gateway_user -d payment_gateway"]
+#       interval: 10s
+#       timeout: 5s
+#       retries: 5
+
+#   redis:
+#     image: redis:7-alpine
+#     container_name: gateway_redis
+#     ports:
+#       - "6379:6379"
+
+#   api:
+#     build:
+#       context: ./backend
+#     container_name: gateway_api
+#     ports:
+#       - "8000:8000"
+#     environment:
+#       DATABASE_URL: postgresql://gateway_user:gateway_pass@postgres:5432/payment_gateway
+#       REDIS_URL: redis://redis:6379
+#       PORT: 8000
+#     depends_on:
+#       postgres:
+#         condition: service_healthy
+#       redis:
+#         condition: service_started
+
+#   worker:
+#     build:
+#       context: ./backend
+#     container_name: gateway_worker
+#     command: node worker.js
+#     environment:
+#       DATABASE_URL: postgresql://gateway_user:gateway_pass@postgres:5432/payment_gateway
+#       REDIS_URL: redis://redis:6379
+#     depends_on:
+#       postgres:
+#         condition: service_healthy
+#       redis:
+#         condition: service_started
+
+#   dashboard:
+#     build:
+#       context: ./frontend
+#     container_name: gateway_dashboard
+#     ports:
+#       - "3000:80"
+#     depends_on:
+#       - api
+
+#   checkout:
+#     build:
+#       context: ./checkout-page
+#     container_name: gateway_checkout
+#     ports:
+#       - "3001:80"
+#     depends_on:
+#       - api
+
+# volumes:
+#   pg_data:
+version: "3.8"
 
 services:
   postgres:
@@ -10,11 +86,19 @@ services:
       POSTGRES_PASSWORD: gateway_pass
     ports:
       - "5432:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U gateway_user -d payment_gateway"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+  redis:
+    image: redis:7-alpine
+    container_name: gateway_redis
+    ports:
+      - "6379:6379"
 
   api:
     build:
@@ -24,10 +108,37 @@ services:
       - "8000:8000"
     environment:
       DATABASE_URL: postgresql://gateway_user:gateway_pass@postgres:5432/payment_gateway
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: gateway_user
+      DB_PASSWORD: gateway_pass
+      DB_NAME: payment_gateway
+      REDIS_URL: redis://redis:6379
       PORT: 8000
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_started
+
+  worker:
+    build:
+      context: ./backend
+    container_name: gateway_worker
+    command: node worker.js
+    environment:
+      DATABASE_URL: postgresql://gateway_user:gateway_pass@postgres:5432/payment_gateway
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: gateway_user
+      DB_PASSWORD: gateway_pass
+      DB_NAME: payment_gateway
+      REDIS_URL: redis://redis:6379
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   dashboard:
     build:
@@ -46,3 +157,6 @@ services:
       - "3001:80"
     depends_on:
       - api
+
+volumes:
+  pg_data:
