--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,2 +1,27 @@
+# # Build stage
+# FROM node:18-alpine AS build
+# WORKDIR /app
+# COPY package.json package-lock.json ./
+# RUN npm install
+# COPY . .
+# RUN npm run build
+
+# # Serve stage
+# FROM nginx:alpine
+# COPY --from=build /app/dist /usr/share/nginx/html
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
+# -------- BUILD STAGE --------
+FROM node:18-alpine AS build
+WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
+# -------- SERVE STAGE --------
 FROM nginx:alpine
-COPY . /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
